--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -4,4 +4,6 @@ a{color: white; margin: 40px;}
 h1{color: steelblue;}
 img{width: 800px; border: 4px solid steelblue;}
 p{padding: 10px;}
+.main-para {font-size: 1.5em; line-height: 1.5em;}
+#active {background-color: white; color: steelblue;}
 footer{background-color: steelblue; color: white;}
