--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,9 +1,9 @@
 body{ text-align: center;}
 nav{background-color: steelblue; padding: 10px;}
-a{color: white; margin: 40px;}
+a{color: white; margin: 40px; font-size: 1.5em;}
 h1{color: steelblue;}
-img{width: 800px; border: 4px solid steelblue;}
-p{padding: 10px;}
+img{width: 80%; border: 4px solid steelblue;}
+p{width: 80%; padding: 10px;}
 .main-para {font-size: 1.5em; line-height: 1.5em;}
 #active {background-color: white; color: steelblue;}
 footer{background-color: steelblue; color: white;}
