--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,10 @@
-nav, footer {background-color: steelblue; padding: 10px; text-align: center;}
-a{color: white; margin: 40px; font-size: 1.5em;}
-h1{color: steelblue; text-align: center;}
+nav{background-color: steelblue; padding: 25px; text-align: center;}
+footer {background-color: steelblue; color: white; padding: 10px; text-align: center;}
+a{color: white; margin: 40px; font-size: 1.5em; padding: 25px;}
+h1{color: steelblue; text-align: center; margin: 50px 0;}
 img{width: 80%; display: block; margin: 0 auto; border: 4px solid steelblue;}
 p{width: 80%; padding: 10px;}
 main p {font-size: 1.5em; line-height: 1.5em; width: 80%; margin: 50px auto; text-align: center;}
-footer p {font-size: 20px; margin: 20px auto;}
+footer p {font-size: 20px; margin: 20px auto;padding: 25px;}
 a:hover {background-color: white; color: steelblue;}
+body {margin: 0;}
