--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,22 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&family=Skranji&display=swap');
 #content {max-width: 1600px; margin: 0 auto;}
-nav a {text-align: center; color: #89fbf7; text-decoration: none;}
-nav a:hover {background-color: #7f95d1; color: #000000;}
+#logo_link {padding-top: 5px;}
+nav a {text-align: center; color: #89fbf7; padding: 35px; text-decoration: none;}
+nav a:hover {background-color: #7f95d1; color: #000000; padding-top: 0;}
 #hero-msg h1 {text-align: center;}
 #hero-msg h4 {text-align: center;}
 #hero-img {width: 100%;}
 .button-box {text-align: center;}
-main section {text-align: center; color: #89fbf7;}
+.rivers-card, .camping-card, .rapids-card {margin: 200px 0;}
+main section {text-align: center; color: #89fbf7; font-family: "Nunito Sans", Arial, sans-serif;}
+main section img {box-sizing: border-box;}
 #background {height: 725px; background-color: #89fbf7;}
-body {background-color: #0a2463;}
-header {background-color: #266dd3;}
-.home-title {color: #89fbf7;}
+body {background-color: #0a2463; font-family: "Nunito Sans", Arial, sans-serif; margin: 0; padding: 0;}
+header {background-color: #266dd3; font-family: "Skranji", Helvetica, sans-serif; letter-spacing: 0.1px;}
+.home-title {color: #89fbf7; margin-top: 10px; font-family: "Skranji", Helvetica, sans-serif; letter-spacing: 1px; font-size: 2em;}
+h2 {margin: 0; padding: 0;}
 h4 {color: #89fbf7;}
-.book, .join {background-color: #0a2463; color: #7f95d1; text-decoration: none;}
+.card-img {border: 10px solid black;}
+.book, .join {background-color: #0a2463; color: #7f95d1; text-decoration: none; padding: 15px 30px; margin-top: 50px; border-radius: 5px;}
 .book:hover, .join:hover {background-color: #7f95d1; color: #0a2463;}
-.msg {background-color: #7f95d1;}
+.msg {background-color: #7f95d1; line-height: 1.5em; padding: 35px;}
+.msg p {padding-bottom: 15px;}
 .hero-msg {background-color: #266dd3; color: #89fbf7;}
-footer {background-color: #266dd3; color: #0a2463; font-size: 1.2em;}
-footer a {color: #89fbf7; text-decoration: none;}
+footer {background-color: #266dd3; color: #0a2463; font-size: 1.2em; font-family: "Skranji", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px;}
+footer .social img {padding-top: 15px;}
+footer a {color: #89fbf7; text-decoration: none; letter-spacing: 0.2px;}
 footer a:hover {color: #0a2463; text-decoration: underline;}
 .logo {width: 80px}
-.icon {width: 80px;}
+.icon {width: 80px; padding-top: 10px;}
