--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -17,9 +17,9 @@ header {background-color: #266dd3; font-family: "Skranji", Helvetica, sans-serif
 h2 {margin: 0; padding: 0;}
 h4 {color: #89fbf7;}
 .card-img {border: 10px solid black;}
-.book, .join {background-color: #0a2463; color: #7f95d1; text-decoration: none; padding: 15px 30px; margin-top: 50px; border-radius: 5px;}
+.book, .join {background-color: #89fbf7; color: #0a2463; text-decoration: none; padding: 15px 30px; margin-top: 50px; border-radius: 5px;}
 .book:hover, .join:hover {background-color: #7f95d1; color: #0a2463;}
-.msg {background-color: #7f95d1; line-height: 1.5em; padding: 35px;}
+.msg {background-color: #266dd3; line-height: 1.5em; padding: 35px;}
 .msg p {padding-bottom: 15px;}
 .hero-msg {background-color: #266dd3; color: #89fbf7;}
 footer {background-color: #266dd3; color: #0a2463; font-size: 1.2em; font-family: "Skranji", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px;}
