--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,30 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&family=Skranji&display=swap');
 #content {max-width: 1600px; margin: 0 auto;}
-#logo_link {padding-top: 5px;}
+#logo_link {padding-top: 5px; justify-self: center; align-self: center;}
+nav {display: flex; justify-content: space-around;}
 nav a {text-align: center; color: #89fbf7; padding: 35px; text-decoration: none;}
-nav a:hover {background-color: #7f95d1; color: #000000; padding-top: 0;}
+nav a:hover {background-color: #7f95d1; color: #000000; padding-top: 0; text-align: center; padding: 35px;}
 #hero-msg h1 {text-align: center;}
-#hero-msg h4 {text-align: center;}
-#hero-img {width: 100%;}
+#hero-msg h4 {text-align: center; color: white;}
+#hero-msg {grid-column: 2/3; grid-row: 1/2; margin-top: 100px;}
+#hero-box {z-index: -1; width: 100%; grid-column: 1/4; grid-row: 1/3;}
+#hero {display: grid; grid-template-columns: 1fr 3fr 1fr; margin-top: -100px;}
 .button-box {text-align: center;}
 .rivers-card, .camping-card, .rapids-card {margin: 200px 0;}
+.rivers-card {grid-column: 2/4; grid-row: 2/3;}
+.camping-card {grid-column: 5/7; grid-row: 2/3;}
+.rapids-card {grid-column: 8/10; grid-row: 2/3;}
 main section {text-align: center; color: #89fbf7; font-family: "Nunito Sans", Arial, sans-serif;}
 main section img {box-sizing: border-box;}
-#background {height: 725px; background-color: #89fbf7;}
+.home-grid {display: grid; grid-template-columns: repeat(10, 1fr);}
+#background {grid-column: 1/11; grid-row: 4/9; height: 725px; background-color: #89fbf7;}
 body {background-color: #0a2463; font-family: "Nunito Sans", Arial, sans-serif; margin: 0; padding: 0;}
-header {background-color: #266dd3; font-family: "Skranji", Helvetica, sans-serif; letter-spacing: 0.1px;}
+header {background-color: #266dd3; font-family: "Skranji", Helvetica, sans-serif; letter-spacing: 0.1px; display: grid; grid-template-columns: 150px auto;}
 .home-title {color: #89fbf7; margin-top: 10px; font-family: "Skranji", Helvetica, sans-serif; letter-spacing: 1px; font-size: 2em;}
 h2 {margin: 0; padding: 0;}
 h4 {color: #89fbf7;}
-.card-img {border: 10px solid black;}
+.card-img {border: 10px solid black; transition: transform .5s; box-shadow: 5px 5px 10px #266dd3;}
+.card-img:hover {opacity: .6; transform: scale(1.1);}
+.card-img, .mountains {width: 100%;}
+.mountains {grid-column: 2/7; grid-row: 5/8; box-shadow: 5px 5px 10px #266dd3;}
 .book, .join {background-color: #89fbf7; color: #0a2463; text-decoration: none; padding: 15px 30px; margin-top: 50px; border-radius: 5px;}
 .book:hover, .join:hover {background-color: #7f95d1; color: #0a2463;}
-.msg {background-color: #266dd3; line-height: 1.5em; padding: 35px;}
+.msg {background-color: #266dd3; grid-column: 6/10; grid-row: 6/7; line-height: 1.5em; padding: 35px; box-shadow: 5px 5px 10px #266dd3;}
 .msg p {padding-bottom: 15px;}
-.hero-msg {background-color: #266dd3; color: #89fbf7;}
-footer {background-color: #266dd3; color: #0a2463; font-size: 1.2em; font-family: "Skranji", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px;}
+footer {background-color: #266dd3; color: #0a2463; font-size: 1.2em; font-family: "Skranji", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px; display: flex; justify-content: space-around; align-items: center;}
 footer .social img {padding-top: 15px;}
 footer a {color: #89fbf7; text-decoration: none; letter-spacing: 0.2px;}
 footer a:hover {color: #0a2463; text-decoration: underline;}
 .logo {width: 80px}
 .icon {width: 80px; padding-top: 10px;}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    nav a:hover {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #89fbf7;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none; 
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
