--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,11 +4,12 @@
 nav {display: flex; justify-content: space-around;}
 nav a {text-align: center; color: #89fbf7; padding: 35px; text-decoration: none;}
 nav a:hover {background-color: #7f95d1; color: #000000; padding-top: 0; text-align: center; padding: 35px;}
+#hero {display: grid; grid-template-columns: 1fr 3fr 1fr; margin-top: -100px;}
 #hero-msg h1 {text-align: center;}
 #hero-msg h4 {text-align: center; color: white;}
 #hero-msg {grid-column: 2/3; grid-row: 1/2; margin-top: 100px;}
 #hero-box {z-index: -1; width: 100%; grid-column: 1/4; grid-row: 1/3;}
-#hero {display: grid; grid-template-columns: 1fr 3fr 1fr; margin-top: -100px;}
+#hero-img {width: 100%;}
 .button-box {text-align: center;}
 .rivers-card, .camping-card, .rapids-card {margin: 200px 0;}
 .rivers-card {grid-column: 2/4; grid-row: 2/3;}
