--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -38,6 +38,20 @@ footer a {color: #89fbf7; text-decoration: none; letter-spacing: 0.2px;}
 footer a:hover {color: #0a2463; text-decoration: underline;}
 .logo {width: 80px}
 .icon {width: 80px; padding-top: 10px;}
+#Page2 article {display: grid; grid-template-columns: 1fr 1fr 1fr; background-color: #89fbf7; color: #0a2463; padding: 5px; text-align: center;}
+#Page2 article h1 {background-color: #89fbf7; grid-column: 1/2; color: #0a2463; text-align: left; margin: 5px 50px; text-decoration: underline;}
+#Page2 article p {grid-column: 1/3; text-align: left; margin: 5px 50px;}
+#Page2 article img {margin: 0; padding: 0; grid-column: 3/4; border-radius: 100px;}
+#Page2 article img:hover {opacity: .6; transform: scale(1.1);transition: transform .5s; box-shadow: 5px 5px 10px #266dd3;}
+#Page2 section {margin: 50px; background-color: #266dd3; padding: 10px; border-radius: 10px;}
+#Page2 section:hover {margin: 50px; background-color: #266dd3; padding: 5px; border-radius: 10px; border: 5px dotted #7f95d1;}
+#Page2 h2 {background-color: #89fbf7; text-transform: none; color: #0a2463; border-radius: 10px;}
+#Page2 h1 {background-color: #89fbf7; margin: 0 auto; text-align: center; padding-top: 15px; padding-bottom: 15px;}
+
+/* select {background-color: #89fbf7; color: #0a2463; padding: 10px; display: block; width: 40%; margin: 0 auto;}
+button {grid-column: 1/5; background-color: #89fbf7; ; color: #0a2463; padding: 10px; margin: 0 auto; text-align: center; width: 100%;}
+.dropdown-container {display: none; background-color: #89fbf7; color: #266dd3; text-emphasis: bold; padding: 2px; width: 100%;}
+option {margin: 10px;} */
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
