--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -47,6 +47,17 @@ footer a:hover {color: #0a2463; text-decoration: underline;}
 #Page2 section:hover {margin: 50px; background-color: #266dd3; padding: 5px; border-radius: 10px; border: 5px dotted #7f95d1;}
 #Page2 h2 {background-color: #89fbf7; text-transform: none; color: #0a2463; border-radius: 10px;}
 #Page2 h1 {background-color: #89fbf7; margin: 0 auto; text-align: center; padding-top: 15px; padding-bottom: 15px;}
+form {margin: 150px auto; width: 400px; padding: 1em; border: 5px solid #7f95d1; box-shadow: 5px 5px 10px #7f95d1;}
+ul {list-style: none; padding: 0; margin: 0;}
+form li + li {margin-top: 1em;}
+label {display: inline-block; width: 90px; text-align: right; color: #89fbf7;}
+input, textarea {font: 1em sans-serif; width: 300px; box-sizing: border-box; background-color: #89fbf7; color: #0a2463; border: 1px solid #7f95d1;}
+input:focus, textarea:focus {border-color: #0a2463;}
+textarea {vertical-align: top; height: 5em;}
+.button {padding-left: 90px;}
+button {margin-left: 0.5em; color: #89fbf7; background-color: #266dd3; border-radius: 10px;}
+#feedback {background-color: #89fbf7; color: #0a2463; position: absolute; top: 0; left: 0; right: 0; padding: .5em; display: none;}
+.moveDown {margin-top: 3em;}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
