--- a/readingright/styles/styles.css
+++ b/readingright/styles/styles.css
@@ -1,3 +1,23 @@
-p {display: block;}
-#hero-img {width: 100%;}
-button a {text-decoration: none;}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Nunito+Sans:opsz,wght@6..12,300&family=Playpen+Sans:wght@200&family=Skranji&family=Work+Sans:ital@1&display=swap');
+#content {max-width: 1600px; margin: 0 auto;}
+#logo_link {padding-top: 5px; justify-self: center; align-self: center;}
+nav {display: flex; justify-content: space-around; font-family: "Playpen Sans", "Noto Sans", sans-serif; margin-top: 0;}
+nav a {margin: 0; text-align: center; color: #edd9ae; padding: 35px; text-decoration: none;}
+nav a:hover {text-align: center; background-color: #036d19; color: #edd9ae; padding: 35px; text-decoration: none;}
+button a {text-decoration: none; padding: 15px 30px;}
+#hero {display: grid; grid-template-columns: 1fr 3fr 1fr; font-family: "Playpen Sans", "Noto Sans", sans-serif; }
+#hero-img {width: 100%; grid-column: 1/4; image-resolution: 30%;}
+#hero-box {z-index: -1; width: 100%; grid-column: 1/4; grid-row: 1/2;}
+#hero-msg {grid-column: 2/3; grid-row: 1/2; margin-top: 100px; margin: 100px auto; color: #edd9ae; font-size: x-large;}
+#rbox, #hbox {display: grid; grid-template-columns: 2fr 1fr;}
+p {grid-column: 1/2; grid-row: 2/3; font-family: "Noto Sans", Helvetica, sans-serif; letter-spacing: 1px; line-height: 30px; font-size: larger; color: #edd9ae; margin: 10px 15px;}
+h2 {grid-column: 1/2; grid-row: 1/2; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e; margin: 0 5px;}
+button {grid-column: 1/2; grid-row: 3/4; width: 20%; padding: 5px; text-align: center; height: 50px; width: 300px; margin: 0 auto; border: 5px solid #994636; background-color: #edd9ae; letter-spacing: 2px; font-size: medium; color: #edd9ae; border-radius: 20px;}
+button a {text-emphasis: none; text-decoration: none;}
+#rbox img, #hbox img {grid-column: 2/3; grid-row: 2/4; width: 100%; border-radius: 10px;}
+body {background-color: #036d19;}
+header {background-color: #994636; letter-spacing: 0.1px; display: grid; grid-template-columns: 150px auto; margin-top: 0;}
+footer {background-color: #994636; font-size: 1.2em; font-family: "Skranji", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px; display: flex; justify-content: space-around; align-items: center;}
+footer p {color: #edd9ae;}
+footer a {color: #edd9ae; text-decoration: none; letter-spacing: 0.2px;}
+footer a:hover {color: #cea07e; text-decoration: wavy; border: 2px solid #cea07e; padding: 5px;}
