--- a/readingright/styles/styles.css
+++ b/readingright/styles/styles.css
@@ -4,15 +4,14 @@
 nav {display: flex; justify-content: space-around; font-family: "Playpen Sans", "Noto Sans", sans-serif; margin-top: 0;}
 nav a {margin: 0; text-align: center; color: #edd9ae; padding: 35px; text-decoration: none;}
 nav a:hover {text-align: center; background-color: #036d19; color: #edd9ae; padding: 35px; text-decoration: none;}
-button a {text-decoration: none; padding: 15px 30px;}
-#hero {display: grid; grid-template-columns: 1fr 3fr 1fr; font-family: "Playpen Sans", "Noto Sans", sans-serif; }
-#hero-img {width: 100%; grid-column: 1/4; image-resolution: 30%;}
+#hero {display: grid; grid-template-columns: 1fr 3fr 1fr; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e;}
+#hero-img {width: 100%; grid-column: 1/4;}
 #hero-box {z-index: -1; width: 100%; grid-column: 1/4; grid-row: 1/2;}
 #hero-msg {grid-column: 2/3; grid-row: 1/2; margin-top: 100px; margin: 100px auto; color: #edd9ae; font-size: x-large;}
 #rbox, #hbox {display: grid; grid-template-columns: 2fr 1fr;}
 p {grid-column: 1/2; grid-row: 2/3; font-family: "Noto Sans", Helvetica, sans-serif; letter-spacing: 1px; line-height: 30px; font-size: larger; color: #edd9ae; margin: 10px 15px;}
 h2 {grid-column: 1/2; grid-row: 1/2; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e; margin: 0 5px;}
-button {grid-column: 1/2; grid-row: 3/4; width: 20%; padding: 5px; text-align: center; height: 50px; width: 300px; margin: 0 auto; border: 5px solid #994636; background-color: #edd9ae; letter-spacing: 2px; font-size: medium; color: #edd9ae; border-radius: 20px;}
+button {grid-column: 1/2; grid-row: 3/4; width: 20%; padding: 5px; text-align: center; height: 50px; width: 300px; margin: 0 auto; border: 5px solid #994636; background-color: #edd9ae; letter-spacing: 2px; font-size: medium; color: #036d19; border-radius: 20px;}
 button a {text-emphasis: none; text-decoration: none;}
 #rbox img, #hbox img {grid-column: 2/3; grid-row: 2/4; width: 100%; border-radius: 10px;}
 body {background-color: #036d19;}
@@ -21,3 +20,48 @@ footer {background-color: #994636; font-size: 1.2em; font-family: "Skranji", Hel
 footer p {color: #edd9ae;}
 footer a {color: #edd9ae; text-decoration: none; letter-spacing: 0.2px;}
 footer a:hover {color: #cea07e; text-decoration: wavy; border: 2px solid #cea07e; padding: 5px;}
+.button {grid-column: 1/2; grid-row: 3/4; padding: 10px; text-align: center; width: 300px; text-decoration: none; margin: 0 auto; border: 5px solid #994636; background-color: #edd9ae; height: 20px; letter-spacing: 2px; font-size: larger; color: #036d19; border-radius: 20px;}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    nav a:hover {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #edd9ae;
+    }
+    }
+    #background {
+        display: none; 
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    section {
+        padding: 10px; margin-top: 15px;
+    }
+    footer {
+        margin-top: 25px;
+    }
