--- a/readingright/styles/styles.css
+++ b/readingright/styles/styles.css
@@ -54,6 +54,15 @@ main a:hover {background-color: #994636; color: #edd9ae;}
 .hpage a {text-decoration: none; color: #edd9ae}
 .hpage header nav a:hover {background-color: #036d19;}
 .hpage footer a:hover {background-color: #994636; color: #cea07e; text-decoration: wavy; border: 2px solid #cea07e; letter-spacing: 0.2px; padding: 5px;}
+form {margin: 150px auto; width: 400px; padding: 1em; border: 5px solid #cea07e; box-shadow: 5px 5px 10px #cea07e;}
+#comment ul {list-style: none; color: #036d19; padding: 0; margin: 0;}
+form li {margin-top: 1em; color: #036d19;}
+label {display: inline-block; width: 90px; text-align: left; color: #edd9ae;}
+input, textarea {font: 1em sans-serif; width: 300px; box-sizing: border-box; background-color: #994636; color: #edd9ae; border: 1px solid #cea07e;}
+input:focus, textarea:focus {border-color: #edd9ae;}
+textarea {vertical-align: top; height: 5em;}
+button {margin-left: 0.5em; color: #edd9ae; background-color: #994636; border-radius: 10px;}
+.moveDown {margin-top: 3em;}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
