--- a/readingright/styles/styles.css
+++ b/readingright/styles/styles.css
@@ -5,9 +5,9 @@ nav {display: flex; justify-content: space-around; font-family: "Playpen Sans", 
 nav a {margin: 0; text-align: center; color: #edd9ae; padding: 35px; text-decoration: none;}
 nav a:hover {text-align: center; background-color: #036d19; color: #edd9ae; padding: 35px; text-decoration: none;}
 #hero {display: grid; grid-template-columns: 1fr 3fr 1fr; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e;}
-#hero-img {width: 100%; grid-column: 1/4;}
+#hero-img {width: 100%; grid-column: 1/4; height: 200px;}
 #hero-box {z-index: -1; width: 100%; grid-column: 1/4; grid-row: 1/2;}
-#hero-msg {grid-column: 2/3; grid-row: 1/2; margin-top: 100px; margin: 100px auto; color: #edd9ae; font-size: x-large;}
+#hero-msg {grid-column: 2/3; grid-row: 1/2; margin: -30px auto; color: #edd9ae; font-size: 10px;}
 #rbox, #hbox {display: grid; grid-template-columns: 2fr 1fr;}
 p {grid-column: 1/2; grid-row: 2/3; font-family: "Noto Sans", Helvetica, sans-serif; letter-spacing: 1px; line-height: 30px; font-size: larger; color: #edd9ae; margin: 10px 15px;}
 h2 {grid-column: 1/2; grid-row: 1/2; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e; margin: 0 5px;}
@@ -15,16 +15,16 @@ h2 {grid-column: 1/2; grid-row: 1/2; font-family: "Playpen Sans", "Noto Sans", s
 body {background-color: #036d19;}
 .rpage {background-color: #994636;}
 header {background-color: #994636; letter-spacing: 0.1px; display: grid; grid-template-columns: 150px auto; margin-top: 0;}
-footer {background-color: #994636; font-size: 1.2em; font-family: "Skranji", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px; display: flex; justify-content: space-around; align-items: center;}
+footer {background-color: #994636; font-size: 1.2em; font-family: "Noto Sans", Helvetica, sans-serif; padding: 25px 50px; margin-top: 200px; display: flex; justify-content: space-around; align-items: center;}
 footer p {color: #edd9ae;}
 footer a {color: #edd9ae; text-decoration: none; letter-spacing: 0.2px; padding: 7px;}
 footer a:hover {color: #cea07e; text-decoration: none; border: 2px solid #cea07e; letter-spacing: 0.2px; padding: 5px;}
 .button {grid-column: 1/2; grid-row: 3/4; padding: 10px; text-align: center; width: 300px; text-decoration: none; margin: 0 auto; border: 5px solid #994636; background-color: #edd9ae; height: 20px; letter-spacing: 2px; font-size: larger; color: #036d19; border-radius: 20px;}
-.rtitle {background-color: #994636; opacity: 90%; padding: 2px 45px 2px 45px; border: 5px dotted #cea07e; font-size: 200px;}
-.htitle {background-color: #edd9ae; opacity: 90%; padding: 2px 45px 2px 45px; border: 5px dotted #036d19; font-size: 200px; color: #036d19;}
+.rtitle {background-color: #994636; opacity: 90%; padding: 2px 25px 2px 25px; border: 5px dotted #cea07e; font-size: 75px; text-align: center;}
+.htitle {background-color: #edd9ae; opacity: 90%; padding: 2px 25px 2px 25px; border: 5px dotted #036d19; font-size: 75px; color: #036d19;}
 #intro {display: grid; grid-template-columns: 2fr 1fr;}
 #intro p {grid-column: 1/2; grid-row: 1/2; text-align: left; font-size: large; letter-spacing: 2px;}
-#intro img {grid-column: 2/3; grid-row: 1/3; margin: 0 auto;}
+#intro img {grid-column: 2/3; grid-row: 1/3; margin: 15px auto;}
 #first {grid-column: 1/2; grid-row: 2/5; line-height: 20px; color: #edd9ae; font-size: large;}
 #first a {color: #edd9ae; text-decoration: none; font-size: medium; color: #edd9ae;}
 .rpage a:hover {background-color: #cea07e;}
@@ -37,7 +37,8 @@ footer a:hover {color: #cea07e; text-decoration: none; border: 2px solid #cea07e
 #rightb {grid-column: 2/3; grid-row: 1/3; margin: 0; text-align: left;}
 #right img {grid-column: 1/2; grid-row: 1/2; margin: 130px 175px}
 .rpage h3 {text-decoration: underline; color: #cea07e;}
-main a {text-decoration: none; display: inline-block; padding: 8px 16px;}
+main {font-family: "Playpen Sans", Helvetica, sans-serif;}
+main a {text-decoration: none; display: inline-block; padding: 8px 16px; font-family: "Playpen Sans", Helvetica, sans-serif;}
 main a:hover {background-color: #994636; color: #edd9ae;}
 #void {background-color: #edd9ae; color: #994636; margin-top: 10px; border-radius: 20%; opacity: 60%;}
 #void:hover {background-color: #edd9ae; color: #994636; margin-top: 10px; border-radius: 20%; opacity: 60%;}
@@ -82,16 +83,23 @@ button {margin-left: 0.5em; color: #edd9ae; background-color: #994636; border-ra
     #hero {
         margin-top: 0;
     }
+    #hero img {
+        width: 100%;
+        height: 200px;
+    }
     #hero-msg {
         margin-top: 0;
+        font-size: x-large;
     }
     .rtitle {
-        font-size: 100px; 
+        font-size: 70%; 
         text-align: center;
+        width: auto;
     }
     .htitle {
-        font-size: 100px;
+        font-size: 70%;
         text-align: center;
+        width: auto;
     }
     #hero-msg h4 {
         display: none;
@@ -100,11 +108,23 @@ button {margin-left: 0.5em; color: #edd9ae; background-color: #994636; border-ra
         font-size: 25px;
         color: #edd9ae;
     }
+    .rpage li {
+        margin: 0 auto;
+        grid-column: 1/3;
+    }
+    #intro img {
+        grid-column: 1/3; 
+        grid-row: 1/2;
+    }
+    #intro p {
+        grid-column: 1/3;
+        grid-row: 2/4;
+        text-align: center;
     }
     #background {
         display: none; 
     }
-    .mountains, .msg {
+    .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
