--- a/readingright/styles/styles.css
+++ b/readingright/styles/styles.css
@@ -5,12 +5,12 @@ nav {display: flex; justify-content: space-around; font-family: "Playpen Sans", 
 nav a {margin: 0; text-align: center; color: #edd9ae; padding: 35px; text-decoration: none;}
 nav a:hover {text-align: center; background-color: #036d19; color: #edd9ae; padding: 35px; text-decoration: none;}
 #hero {display: grid; grid-template-columns: 1fr 3fr 1fr; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e;}
-#hero-img {width: 100%; grid-column: 1/4; height: 200px;}
+#hero-img {width: 100%; grid-column: 1/4; height: 300px; margin-top: -75px;}
 #hero-box {z-index: -1; width: 100%; grid-column: 1/4; grid-row: 1/2;}
 #hero-msg {grid-column: 2/3; grid-row: 1/2; margin: 30px auto; color: #994636; font-size: 20px;}
 .rpage #hero-msg {grid-column: 2/3; grid-row: 1/2; margin: -30px auto; color: #edd9ae; font-size: 10px;}
 .hpage #hero-msg {grid-column: 2/3; grid-row: 1/2; margin: -30px auto; font-size: 10px;}
-p {grid-column: 1/2; grid-row: 2/3; font-family: "Noto Sans", Helvetica, sans-serif; letter-spacing: 1px; line-height: 30px; font-size: larger; color: #edd9ae; margin: 20pxpx 15px;}
+p {grid-column: 1/2; grid-row: 2/3; font-family: "Noto Sans", Helvetica, sans-serif; letter-spacing: 1px; line-height: 30px; font-size: larger; color: #edd9ae; margin: 20px 15px;}
 h2 {grid-column: 1/2; grid-row: 1/2; font-family: "Playpen Sans", "Noto Sans", sans-serif; color: #cea07e; margin: 10px 5px;}
 body {background-color: #036d19;}
 .rpage {background-color: #994636;}
@@ -151,6 +151,7 @@ button {margin-left: 0.5em; color: #edd9ae; background-color: #994636; border-ra
     section {
         padding: 10px; margin-top: 15px;
     }
-    footer {
-        margin-top: 25px;
+    main {
+        margin-bottom: 10px;
     }
+}
